devops/specs/ui-parts/ui-parts-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui-parts
  namespace: ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ui-parts
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: ui-parts
    spec:
      containers:
      - name: ui-parts
        image: eu.gcr.io/the-mesh-254617/ui-design-ui-parts:6da7e39-1614163088318 # {"$imagepolicy": "flux-system:ui-parts-design"}
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
          name: http
          protocol: TCP
