devops/specs/ui-parts/advertised-resource-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ui-parts
  namespace: ui
  labels:
    app: ui-parts
spec:
  ports:
    - name: http
      port: 3000
      targetPort: http
  selector:
    app: ui-parts
