devops/specs/ui-parts/ui-parts-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: ui-parts
  namespace: ui
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: ui-parts-tls
      hosts:
        - 'ui-parts.ui.monstrs.dev'
